tests/parsing/smtlib/poly/errors/046_prop_lit_unclosed_1.expected
File "tests/parsing/smtlib/poly/errors/046_prop_lit_unclosed_1.psmt2", line 2, character 28-29:
2 | (check-sat-assuming ((not p _)))
                                ^
Error while parsing a propositional literal, read the reserved word '_',
      but expected a closing parenthesis.
